<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="comkiolk.github.braintester.CreateTest">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ID_FIELD"/>
        <EditText
            android:id="@+id/id_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/QUESTION"/>
        <EditText
            android:id="@+id/question_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/OPTION_1"/>
        <EditText
            android:id="@+id/option_1_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/OPTION_2"/>
        <EditText
            android:id="@+id/option_2_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/OPTION_3"/>
        <EditText
            android:id="@+id/option_3_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/OPTION_4"/>
        <EditText
            android:id="@+id/option_4_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CORRECT_ANSWER"/>
        <EditText
            android:id="@+id/correct_answer_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TOPIC_OF_CQUESTION"/>
        <EditText
            android:id="@+id/topic_of_question_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_new_test_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ADD_NEW_TEST_BUTTON"/>

        <Button
            android:id="@+id/get_test_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GET_TEST"/>


        <Button
            android:id="@+id/delete_test_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DELETE_TEST"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/find_question_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FIND_BY_ID"/>


        <Button
            android:id="@+id/update_test_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UPDATE_TEST"/>

        <Button
            android:id="@+id/delete_one_raw_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DELETE_RAW"/>

    </LinearLayout>
</LinearLayout>
