<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comkiolk.github.braintester.MainActivity">

    <LinearLayout
        android:id="@+id/question_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Question"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/test_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_above="@+id/options_radio_group">


    </FrameLayout>

    <include layout="@layout/test_form_layout"/>

    <LinearLayout
        android:id="@+id/test_buttons_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/options_radio_group">

        <Button
            android:id="@+id/start_test_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/START_TEST_BUTTON">

        </Button>

        <Button
            android:id="@+id/random_question_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/RANDOM_QUESTION_BUTTON">

        </Button>

        <Button
            android:id="@+id/chek_answer_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/CHECK_ANSWER_BUTTON">

        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/create_test_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/test_buttons_layer">

        <Button
            android:id="@+id/create_test_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/CREATE_TEST_BUTTON">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_number_of_questions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_test_layout">
        <TextView
            android:id="@+id/number_of_question_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/TOTAL_NUMBER_OF_QUESTIONS"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_testing_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/total_number_of_questions_layout">

        <Button
            android:id="@+id/start_testing_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/START_TESTING">
        </Button>
    </LinearLayout>

</RelativeLayout>
