<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comkiolk.github.braintester.UI.activities.TestingPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_number_of_questions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ADD_BUTTON"/>

        <TextView
            android:id="@+id/number_chose_question_text_view"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="32sp"
            tools:text="4"/>

        <Button
            android:id="@+id/remove_number_of_questions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/REMOVE_BUTTON"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/star_button_layout">
        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Example"/>
    </LinearLayout>
    <include layout="@layout/test_form_layout"/>

    <LinearLayout
        android:id="@+id/star_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/start_custom_test_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CUSTOM_TEST_BUTTON"/>

    </LinearLayout>

</RelativeLayout>
